examples/invalid/00_ResultTooFewArgs.lune
module Bad exposing (bad)

type Result e a =
  Err e
  | Ok a

bad : Result Int
bad =
  Ok 1
